CloudAlpacas/salesforce/main/default/objects/SDO_Analytics_ServicePresence__c/SDO_Analytics_ServicePresence__c.object-meta.xml
<CustomObject>
    <description>Shadow object for UserServicePresence. Stores demo agent presence/utilization data for Service Insights dashboards. Feeds ssot__AgentServicePresence__dlm via a SalesforceDotCom data stream in Data Cloud.</description>
    <label>SDO Analytics Service Presence</label>
    <nameField>
        <displayFormat>ASP-{00000}</displayFormat>
        <label>SDO Analytics Service Presence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDO Analytics Service Presence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>