CloudAlpacas/salesforce/main/default/objects/SDO_Analytics_ServicePresence__c/fields/Away__c.field-meta.xml
<CustomField>
    <fullName>Away__c</fullName>
    <label>Away</label>
    <length>5</length>
    <type>Text</type>
</CustomField>