CloudAlpacas/salesforce/main/default/objects/SDO_Analytics_ServicePresence__c/fields/ConfiguredCapacity__c.field-meta.xml
<CustomField>
    <fullName>ConfiguredCapacity__c</fullName>
    <label>Configured Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>