CloudAlpacas/salesforce/main/default/objects/SDO_Analytics_ServicePresence__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Upsert key. Format: SP-TAB-{nnnnn}</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>