CloudAlpacas/salesforce/main/default/objects/SDO_Analytics_ServicePresence__c/fields/IdleDuration__c.field-meta.xml
<CustomField>
    <fullName>IdleDuration__c</fullName>
    <label>Idle Duration (Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>