CloudAlpacas/salesforce/main/default/objects/SDO_Analytics_ServicePresence__c/fields/ServicePresenceStatusId__c.field-meta.xml
<CustomField>
    <fullName>ServicePresenceStatusId__c</fullName>
    <label>Service Presence Status ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>