CloudAlpacas/salesforce/main/default/objects/SDO_Analytics_ServicePresence__c/fields/StatusStartDate__c.field-meta.xml
<CustomField>
    <fullName>StatusStartDate__c</fullName>
    <label>Status Start Date</label>
    <type>DateTime</type>
</CustomField>