CloudAlpacas/salesforce/main/default/objects/SDO_Analytics_ServicePresence__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ServicePresenceUser</relationshipName>
    <type>Lookup</type>
</CustomField>